--- a/web/package.json
+++ b/web/package.json
@@ -18,7 +18,6 @@
         "react-bootstrap": "^2.10.7",
         "react-bootstrap-select": "^0.14.0",
         "react-dom": "^18.3.1",
-        "react-helmet": "^6.1.0",
         "react-router-dom": "^7.1.1",
         "react-transition-group": "^4.4.5",
         "tailwind-merge": "^2.6.0",
@@ -31,11 +30,13 @@
         "@types/react-dom": "^18.3.5",
         "@vitejs/plugin-react": "^4.3.4",
         "autoprefixer": "^10.4.20",
+        "css-loader": "^7.1.2",
         "eslint": "^9.17.0",
         "eslint-plugin-react-hooks": "^5.0.0",
         "eslint-plugin-react-refresh": "^0.4.16",
         "globals": "^15.14.0",
         "postcss": "^8.4.49",
+        "style-loader": "^4.0.0",
         "tailwindcss": "^3.4.17",
         "typescript": "~5.6.2",
         "typescript-eslint": "^8.18.2",
