--- a/web/package.json
+++ b/web/package.json
@@ -11,6 +11,8 @@
     },
     "dependencies": {
         "axios": "^1.7.9",
+        "crypto-js": "^4.2.0",
+        "moment": "^2.30.1",
         "primeflex": "^3.3.1",
         "primeicons": "^7.0.0",
         "primereact": "^10.6.6",
@@ -26,6 +28,7 @@
     },
     "devDependencies": {
         "@eslint/js": "^9.17.0",
+        "@types/crypto-js": "^4.2.2",
         "@types/react": "^18.3.18",
         "@types/react-dom": "^18.3.5",
         "@vitejs/plugin-react": "^4.3.4",
